hidden scrollbar,btn fixes

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -16,8 +16,8 @@
 }
 
 .btn-primary {
-    background: #66abffa6;
-    padding: 1%;
+    background: #5ab5e6;
+    padding: 0.5em 1em;
     color: white;
     font-size: 14px;
     border-left: 1px solid white;
